; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/Osd/extr_OsdSchedule.c_AcpiOsGetTimer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/Osd/extr_OsdSchedule.c_AcpiOsGetTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bintime = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiOsGetTimer() #0 {
  %1 = alloca %struct.bintime, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @binuptime(%struct.bintime* %1)
  %4 = getelementptr inbounds %struct.bintime, %struct.bintime* %1, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = mul nsw i32 %6, 10000000
  store i32 %7, i32* %2, align 4
  %8 = getelementptr inbounds %struct.bintime, %struct.bintime* %1, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = ashr i32 %9, 32
  %11 = mul nsw i32 10000000, %10
  %12 = ashr i32 %11, 32
  %13 = load i32, i32* %2, align 4
  %14 = add nsw i32 %13, %12
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @binuptime(%struct.bintime*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
